chore: Implement store JPA repositories and initializers
Signed-off-by: Markel Txasko <mtxasko17@gmail.com>